# HelloWorldLambdaUV

./: .gitignore  Docker  Dockerfile  README.md  pyproject.toml  zipFunction.sh
src/hello_world_lambda_uv/: handler.py  lambda_handler.py
tests/: handler_test.py
